2004-11-20  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (read_encoded_value): Correctly calculate number
	of bytes read for aligned LEB128 encodings.

2004-11-19  Mark Kettenis  <kettenis@gnu.org>

	* bsd-kvm.c (bsd_kvm_pcb_cmd): Cast return value from
	parse_and_eval_address to u_long before converting it to a pointer
	type.
	* i386fbsd-nat.c (_initialize_i386fbsd_nat): Change type of
	ps_strings from int to u_long.
	* i386obsd-nat.c (_initialize_i386obsd_nat): Cast _ps.val to
	u_long instead of CORE_ADDR.

2004-11-18  Mark Kettenis  <kettenis@gnu.org>

	* dbxread.c (process_one_symbol): Do not adjust address of first
	N_SLINE stab for a function for code generated by non-GCC
	compilers.

2004-11-18  Kevin Buettner  <kevinb@redhat.com>

	* solib-null.c: New file.

2004-11-17  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Drop MIPS and remote.

2004-11-15  Andrew Cagney  <cagney@gnu.org>

	* findvar.c (value_of_register): Set the frame ID.
	* value.c (value_primitive_field): Copy the frame ID.
	* valops.c (value_assign): Simplify lval_register case, there's
	always a frame.

2004-11-14  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.in (mips-linux-tdep.o): Update dependencies.
	* mips-linux-tdep.c: Include "regcache.h".
	(fill_fpregset, mips64_fill_fpregset): Use regcache_raw_collect.

2004-11-14  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.in (linux-thread-db.o): Fix typo in last change.

2004-11-14  Daniel Jacobowitz  <dan@debian.org>

	* linux-thread-db.c: New file, renamed from thread-db.c.
	* thread-db.c: Remove.
	* Makefile.in (linux-thread-db.o): Rename from thread-db.o rule.
	* config/alpha/alpha-linux.mh (NATDEPFILES): Rename thread-db.o
	to linux-thread-db.o.
	* config/arm/linux.mh (NATDEPFILES): Likewise.
	* config/i386/linux.mh (NATDEPFILES): Likewise.
	* config/i386/linux64.mh (NATDEPFILES): Likewise.
	* config/ia64/linux.mh (NATDEPFILES): Likewise.
	* config/m32r/linux.mh (NATDEPFILES): Likewise.