@@ -1,5 +1,10 @@
 2004-11-20  Mark Kettenis  <kettenis@gnu.org>
 
+	* dbxread.c: Include "gdb_string.h".
+	(record_minimal_symbol, read_ofile_symtab): Replace
+	DEPRECATED_STREQ and DEPRECATED_STREQN with strcmp and strncmp.
+	* Makefile.in (dbxread.o): Update dependencies.
+
 	* dwarf2-frame.c (read_encoded_value): Correctly calculate number
 	of bytes read for aligned LEB128 encodings.
 
